# cinemix

./: .env.sample  .gitignore  README.md  pyproject.toml  ruff-check-results.json
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: system_overview.md
docs/implementation/: 01_implementation_guidance.md  api_integration.md  caching.md  rate_limiting.md
src/: config.py  main.py
src/middlewares/: __init__.py  rate_limiter_middleware.py
src/models/: __init__.py  movie_details.py  response.py  search_responce.py
src/redis/: __init__.py
src/routes/: search.py
src/services/: __init__.py  cache_service.py  omdb_client.py  rate_limiter.py  redis_connection.py
src/utils/: __init__.py  get_movie.py  logger.py  response_parser.py
